reviewing and checking error code and summary in progress

--- a/angel_jpcode3/angel_staging.ipynb
+++ b/angel_jpcode3/angel_staging.ipynb
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "98630b6c",
    "metadata": {},
    "outputs": [],
@@ -1104,7 +1104,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 90,
+   "id": "41aa62d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [BPS_Analyst, BPS_Analyst]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "invalid_rows = tracker_parsed[\n",
+    "    tracker_parsed[raw_field].notna() &\n",
+    "    tracker_parsed[field].isna()\n",
+    "]\n",
+    "print(invalid_rows[[raw_field, field]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "bf3f0d3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "193\n",
+      "['7671928\\xa0', 'Abhit Jadav', 'Abhit Jadav', 'Ahmed Nouri ', 'Amir', 'Amir', 'Amir', 'Amir', 'AMIR ', 'AMIR ', 'Amir - Deployment', 'Amir - Deployment', 'Amir - Deployment', 'Amir - Deployment', 'Amir /Fay', 'Amir /Sarah Jensen', 'Amir deployment ', 'Amir/Kamal', 'Amir/Kamal', 'Amir/Kamal']\n",
+      "ALEMBA\n",
+      "Breakfix Kit - Spencer     76\n",
+      "Deployment                 12\n",
+      "MDT                         9\n",
+      "Kos - Deployment            7\n",
+      "Kamal Pasha                 7\n",
+      "Ian Lyon                    5\n",
+      "SITE DELIVERY ONLY          5\n",
+      "Amir - Deployment           4\n",
+      "Deployment/David Rimmer     4\n",
+      "Amir                        4\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "bad = tracker_parsed[\n",
+    "    tracker_parsed[\"ALEMBA\"].notna() & tracker_parsed[\"parsed_ALEMBA\"].isna()\n",
+    "]\n",
+    "print(len(bad))\n",
+    "print(bad[\"ALEMBA\"].head(20).tolist())     # sample the bad raw values\n",
+    "print(bad[\"ALEMBA\"].value_counts().head(10))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "id": "d88fdcba",
    "metadata": {},
    "outputs": [],
@@ -1127,12 +1187,13 @@
     "    \"Collection_Date\": \"Collection Date\"\n",
     "}\n",
     "\n",
-    "error_summary[\"field_name\"] = error_summary[\"field_name\"].replace(field_names_report)"
+    "error_summary[\"field_name\"] = error_summary[\"field_name\"].replace(field_names_report)\n",
+    "error_summary = error_summary[error_summary[\"count\"] > 0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 93,
    "id": "00c26ad5",
    "metadata": {},
    "outputs": [
@@ -1174,15 +1235,6 @@
        "      <td>2025-08-08</td>\n",
        "      <td>Request Date</td>\n",
        "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Missing Field</td>\n",
-       "      <td>TRACKER</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-08</td>\n",
-       "      <td>FY</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1284,15 +1336,6 @@
        "      <td>1355</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Missing Field</td>\n",
-       "      <td>TRACKER</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-08</td>\n",
-       "      <td>BPS Analyst</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>Invalid Format</td>\n",
        "      <td>TRACKER</td>\n",
@@ -1300,15 +1343,6 @@
        "      <td>2025-08-08</td>\n",
        "      <td>Request Date</td>\n",
        "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>TRACKER</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-08</td>\n",
-       "      <td>FY</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -1320,105 +1354,6 @@
        "      <td>193</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>TRACKER</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-08</td>\n",
-       "      <td>Budget Code</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>TRACKER</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-08</td>\n",
-       "      <td>Site</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>TRACKER</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-08</td>\n",
-       "      <td>Service User</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>TRACKER</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-08</td>\n",
-       "      <td>Type</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>TRACKER</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-08</td>\n",
-       "      <td>Catalogue Item</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>TRACKER</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-08</td>\n",
-       "      <td>Cost Per Unit</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>TRACKER</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-08</td>\n",
-       "      <td>QTY</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>TRACKER</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-08</td>\n",
-       "      <td>Status</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>TRACKER</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-08</td>\n",
-       "      <td>Total Cost</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>TRACKER</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-08</td>\n",
-       "      <td>Requisition Number</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>TRACKER</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-08</td>\n",
-       "      <td>BPS Analyst</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>Out of Range Values</td>\n",
        "      <td>TRACKER</td>\n",
@@ -1426,15 +1361,6 @@
        "      <td>2025-08-08</td>\n",
        "      <td>FY</td>\n",
        "      <td>307</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Out of Range Dates</td>\n",
-       "      <td>TRACKER</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-08</td>\n",
-       "      <td>Collection Date</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
@@ -1461,7 +1387,6 @@
       "text/plain": [
        "             error_type source_system     data_period date_checked  \\\n",
        "0         Missing Field       TRACKER  23-24 to 24-25   2025-08-08   \n",
-       "1         Missing Field       TRACKER  23-24 to 24-25   2025-08-08   \n",
        "2         Missing Field       TRACKER  23-24 to 24-25   2025-08-08   \n",
        "3         Missing Field       TRACKER  23-24 to 24-25   2025-08-08   \n",
        "4         Missing Field       TRACKER  23-24 to 24-25   2025-08-08   \n",
@@ -1473,29 +1398,14 @@
        "10        Missing Field       TRACKER  23-24 to 24-25   2025-08-08   \n",
        "11        Missing Field       TRACKER  23-24 to 24-25   2025-08-08   \n",
        "12        Missing Field       TRACKER  23-24 to 24-25   2025-08-08   \n",
-       "13        Missing Field       TRACKER  23-24 to 24-25   2025-08-08   \n",
        "14       Invalid Format       TRACKER  23-24 to 24-25   2025-08-08   \n",
-       "15       Invalid Format       TRACKER  23-24 to 24-25   2025-08-08   \n",
        "16       Invalid Format       TRACKER  23-24 to 24-25   2025-08-08   \n",
-       "17       Invalid Format       TRACKER  23-24 to 24-25   2025-08-08   \n",
-       "18       Invalid Format       TRACKER  23-24 to 24-25   2025-08-08   \n",
-       "19       Invalid Format       TRACKER  23-24 to 24-25   2025-08-08   \n",
-       "20       Invalid Format       TRACKER  23-24 to 24-25   2025-08-08   \n",
-       "21       Invalid Format       TRACKER  23-24 to 24-25   2025-08-08   \n",
-       "22       Invalid Format       TRACKER  23-24 to 24-25   2025-08-08   \n",
-       "23       Invalid Format       TRACKER  23-24 to 24-25   2025-08-08   \n",
-       "24       Invalid Format       TRACKER  23-24 to 24-25   2025-08-08   \n",
-       "25       Invalid Format       TRACKER  23-24 to 24-25   2025-08-08   \n",
-       "26       Invalid Format       TRACKER  23-24 to 24-25   2025-08-08   \n",
-       "27       Invalid Format       TRACKER  23-24 to 24-25   2025-08-08   \n",
        "28  Out of Range Values       TRACKER  23-24 to 24-25   2025-08-08   \n",
-       "29   Out of Range Dates       TRACKER  23-24 to 24-25   2025-08-08   \n",
        "30  Out of Range Values       TRACKER  23-24 to 24-25   2025-08-08   \n",
        "31  Cost Value Mismatch       TRACKER  23-24 to 24-25   2025-08-08   \n",
        "\n",
        "            field_name  count  \n",
        "0         Request Date      6  \n",
-       "1                   FY      0  \n",
        "2               ALEMBA    215  \n",
        "3          Budget Code     52  \n",
        "4                 Site     75  \n",
@@ -1507,28 +1417,14 @@
        "10              Status      3  \n",
        "11          Total Cost     18  \n",
        "12  Requisition Number   1355  \n",
-       "13         BPS Analyst      0  \n",
        "14        Request Date      2  \n",
-       "15                  FY      0  \n",
        "16              ALEMBA    193  \n",
-       "17         Budget Code      0  \n",
-       "18                Site      0  \n",
-       "19        Service User      0  \n",
-       "20                Type      0  \n",
-       "21      Catalogue Item      0  \n",
-       "22       Cost Per Unit      0  \n",
-       "23                 QTY      0  \n",
-       "24              Status      0  \n",
-       "25          Total Cost      0  \n",
-       "26  Requisition Number      0  \n",
-       "27         BPS Analyst      0  \n",
        "28                  FY    307  \n",
-       "29     Collection Date      0  \n",
        "30                Site    461  \n",
        "31          Total Cost     13  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
