tracker errors and batch load prep ok

--- a/angel_jpcode3/angel_staging.ipynb
+++ b/angel_jpcode3/angel_staging.ipynb
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "98630b6c",
    "metadata": {},
    "outputs": [],
@@ -1024,7 +1024,7 @@
     "        \"data_period\": data_period,\n",
     "        \"date_checked\": date_checked,\n",
     "        \"field_name\": field,\n",
-    "        \"count\": missing_count\n",
+    "        \"error_count\": missing_count\n",
     "    })\n",
     "\n",
     "\n",
@@ -1039,7 +1039,7 @@
     "        \"data_period\": data_period,\n",
     "        \"date_checked\": date_checked,\n",
     "        \"field_name\": field,\n",
-    "        \"count\": format_error_count\n",
+    "        \"error_count\": format_error_count\n",
     "    })\n",
     "\n",
     "\n",
@@ -1052,7 +1052,7 @@
     "    \"data_period\": data_period,\n",
     "    \"date_checked\": date_checked,\n",
     "    \"field_name\": \"FY\",\n",
-    "    \"count\": out_of_range_FY_count\n",
+    "    \"error_count\": out_of_range_FY_count\n",
     "})\n",
     "\n",
     "\n",
@@ -1071,7 +1071,7 @@
     "    \"data_period\": data_period,\n",
     "    \"date_checked\": date_checked,\n",
     "    \"field_name\": \"parsed_Collection_Date\",\n",
-    "    \"count\": out_of_range_date_count\n",
+    "    \"error_count\": out_of_range_date_count\n",
     "})\n",
     "\n",
     "\n",
@@ -1087,7 +1087,7 @@
     "    \"data_period\": data_period,\n",
     "    \"date_checked\": date_checked,\n",
     "    \"field_name\": \"Site\",\n",
-    "    \"count\": out_of_range_site_count\n",
+    "    \"error_count\": out_of_range_site_count\n",
     "})\n",
     "\n",
     "\n",
@@ -1098,13 +1098,13 @@
     "    \"data_period\": data_period,\n",
     "    \"date_checked\": date_checked,\n",
     "    \"field_name\": \"Total_Cost\",\n",
-    "    \"count\": cost_mismatch_count\n",
+    "    \"error_count\": cost_mismatch_count\n",
     "})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 95,
    "id": "41aa62d8",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 96,
    "id": "bf3f0d3f",
    "metadata": {},
    "outputs": [
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 98,
    "id": "d88fdcba",
    "metadata": {},
    "outputs": [],
@@ -1188,12 +1188,12 @@
     "}\n",
     "\n",
     "error_summary[\"field_name\"] = error_summary[\"field_name\"].replace(field_names_report)\n",
-    "error_summary = error_summary[error_summary[\"count\"] > 0]"
+    "error_summary = error_summary[error_summary[\"error_count\"] > 0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 99,
    "id": "00c26ad5",
    "metadata": {},
    "outputs": [
@@ -1223,7 +1223,7 @@
        "      <th>data_period</th>\n",
        "      <th>date_checked</th>\n",
        "      <th>field_name</th>\n",
-       "      <th>count</th>\n",
+       "      <th>error_count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1404,82 +1404,33 @@
        "30  Out of Range Values       TRACKER  23-24 to 24-25   2025-08-08   \n",
        "31  Cost Value Mismatch       TRACKER  23-24 to 24-25   2025-08-08   \n",
        "\n",
-       "            field_name  count  \n",
-       "0         Request Date      6  \n",
-       "2               ALEMBA    215  \n",
-       "3          Budget Code     52  \n",
-       "4                 Site     75  \n",
-       "5         Service User      1  \n",
-       "6                 Type     25  \n",
-       "7       Catalogue Item      3  \n",
-       "8        Cost Per Unit     34  \n",
-       "9                  QTY      6  \n",
-       "10              Status      3  \n",
-       "11          Total Cost     18  \n",
-       "12  Requisition Number   1355  \n",
-       "14        Request Date      2  \n",
-       "16              ALEMBA    193  \n",
-       "28                  FY    307  \n",
-       "30                Site    461  \n",
-       "31          Total Cost     13  "
+       "            field_name  error_count  \n",
+       "0         Request Date            6  \n",
+       "2               ALEMBA          215  \n",
+       "3          Budget Code           52  \n",
+       "4                 Site           75  \n",
+       "5         Service User            1  \n",
+       "6                 Type           25  \n",
+       "7       Catalogue Item            3  \n",
+       "8        Cost Per Unit           34  \n",
+       "9                  QTY            6  \n",
+       "10              Status            3  \n",
+       "11          Total Cost           18  \n",
+       "12  Requisition Number         1355  \n",
+       "14        Request Date            2  \n",
+       "16              ALEMBA          193  \n",
+       "28                  FY          307  \n",
+       "30                Site          461  \n",
+       "31          Total Cost           13  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "error_summary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "id": "28b642a0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "row_num                            int64\n",
-       "batch_load                datetime64[us]\n",
-       "Request_Date                      object\n",
-       "FY                                object\n",
-       "ALEMBA                            object\n",
-       "Budget_Code                       object\n",
-       "FP                                object\n",
-       "Bulk_Bucket                       object\n",
-       "Funding                           object\n",
-       "ISC_ProjManager                   object\n",
-       "Site                              object\n",
-       "Service_User                      object\n",
-       "Type                              object\n",
-       "Catalogue_Item                    object\n",
-       "Cost_PerUnit                     float64\n",
-       "QTY                              float64\n",
-       "Status                            object\n",
-       "Collection_Date                   object\n",
-       "Total_Cost                        object\n",
-       "Requisition_No                    object\n",
-       "BPS_Analyst                       object\n",
-       "parsed_Request_Date       datetime64[ns]\n",
-       "parsed_QTY                         Int64\n",
-       "parsed_Cost_PerUnit              float64\n",
-       "parsed_Total_Cost                float64\n",
-       "parsed_Collection_Date    datetime64[ns]\n",
-       "parsed_ALEMBA                      Int64\n",
-       "expected_total                   Float64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tracker_parsed.dtypes"
    ]
   }
  ],
